nvidia-graphics-drivers (470.103.01-1) UNRELEASED; urgency=medium

  * New upstream production branch release 470.103.01 (2022-01-31).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.  (Closes: #1004847)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Added support for the following GPUs: NVIDIA GeForce MX550,
      NVIDIA GeForce MX570, NVIDIA GeForce RTX 2050.

  [ Luca Boccassi ]
  * Update nv-readme.ids.

 -- Luca Boccassi <bluca@debian.org>  Tue, 01 Feb 2022 23:23:13 +0000

nvidia-graphics-drivers (470.94-1) unstable; urgency=medium

  * New upstream production branch release 470.94 (2021-12-13).
    - Added support for the following GPU: NVIDIA PG509-210.
    - Worked around an issue that prevented some games from flipping (and
      therefore taking advantage of G-SYNC and G-SYNC Compatible monitors) on
      certain desktops such as GNOME.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 05 Jan 2022 04:08:50 +0100

nvidia-graphics-drivers (470.86-1) unstable; urgency=medium

  * New upstream production branch release 470.86 (2021-11-10).
    - Added support for the following GPUs: RTX A2000 12GB, RTX A4500,
      T400 4GB, T1000 8GB.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * nvidia-kernel-support: Provide /etc/modprobe.d/nvidia-options.conf as a
    template taking into account the module renaming. This is a slave
    alternative of the nvidia alternative.  (Closes: #999670)

 -- Andreas Beckmann <anbe@debian.org>  Tue, 16 Nov 2021 15:05:47 +0100

nvidia-graphics-drivers (470.82.01-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 470.82.01 (2021-11-02).
    - Fixed a regression which prevented DisplayPort and HDMI 2.1 variable
      refresh rate (VRR) G-SYNC Compatible monitors from functioning correctly
      in variable refresh rate mode, resulting in issues such as flickering.
